Bug 91389 - EDITING: Crash when deleting header
Summary: EDITING: Crash when deleting header
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Philippe Jung
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-19 13:30 UTC by Gordo
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (10.51 KB, text/plain)
2015-05-22 10:54 UTC, Gordo
Details
WinDbg backtrace (13.78 KB, text/plain)
2015-05-23 15:30 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-05-19 13:30:22 UTC
1. New Text Document.
2. Click in header portion of document to get floating menu and click on it.
3. Click on floating menu and Delete Header.
4. Are you sure?  Yes.
Result:
Crash

Assertion failed!

LibreOfficeDev 5\program\vcllo.dll
File: C:\cygwin\home\tinderbox\master\include\vcl/outdev.hxx
Line: 284

Expression: mnRefCnt>0

Windows Vista 64
Version: 5.0.0.0.alpha1+
Build ID: 158b50763962f66515062300e265839828463efa
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-19_00:28:31
Comment 1 Philippe Jung 2015-05-19 15:33:37 UTC
VclPtr related but not reproducible with a fresh git master build
Comment 2 Gordo 2015-05-19 16:40:04 UTC
It only crashes when the Sidebar is not closed or hidden.

So, step 1a. Open Sidebar.
Comment 3 Julien Nabet 2015-05-19 19:47:18 UTC
On pc Debian x86-64 with master sources updated today, 5f653490a40850886f94c9fd6b381b4bed1de58a (so after your build), I don't reproduce this.
Sidebar was visible during the test.

Could you give a try with an even newer LO version? As you may know, there are VclPtr fixes these days.
Comment 4 Michael Meeks 2015-05-20 07:28:57 UTC
Yep - can't reproduce here either; I'm using a dbgutil build from:  1349491d48a2f8a130f1b8b840383d31e7927252

Only a couple of fixes since then:

tdf#91364 - fix data-pilot and auto-filter popup lifecycle.
tdf#91259 Crash when closing Help (re-write of splitwin)

Then again, I'm using Linux as well; will run a windows build.
Comment 5 Gordo 2015-05-20 11:09:34 UTC
Was about to post that it is no longer happening but it is.

On the other build it did not happen the first time I created and deleted the header.  I did something like put the cursor outside of it before going back to delete it.

Now with this build I could not get it to crash until I added a header then added a footer and deleted the footer.  From that point on every time I create a header and delete it, it crashes.

Windows Vista 64
Version: 5.0.0.0.alpha1+
Build ID: 2a886adb500fe481e1ea61573551b19e99c55b8b
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-20_00:31:51
Comment 6 Buovjaga 2015-05-22 09:13:19 UTC
(In reply to Gordo from comment #5)
> Now with this build I could not get it to crash until I added a header then
> added a footer and deleted the footer.  From that point on every time I
> create a header and delete it, it crashes.

Not reproduced.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 83eb114394879cbfd073322a51c47d02553c1fcf
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-22_06:33:51
Locale: fi-FI (fi_FI)
Comment 7 Gordo 2015-05-22 10:54:53 UTC
Created attachment 115816 [details]
backtrace

This time, after install, I avoided any other popover menus just in case it was related to one of the other bugs.  The only thing I did was resize the window.  Now there is no assertion message but I did get a glorious backtrace.

Version: 5.1.0.0.alpha1+
Build ID: 83eb114394879cbfd073322a51c47d02553c1fcf
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-22_06:33:51
Comment 8 pierre-yves samyn 2015-05-23 15:30:06 UTC
Hi

I reproduce on windows 7/64 & Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: fr-FR (fr_FR)

Steps to reproduce:
1. File> New> Text Document
2. Click in header portion of document to get floating menu and click on + to insert the header.
3. Insert> Footer> Default style
4. Click into the header flotating menu (still displayed) then
5. Click Delete Header, dialog opens "Are you sure..."
6. Click Yes

Crash (always reproduced)

I set status to New & join a windbg backtrace

Regards
Pierre-Yves
Comment 9 pierre-yves samyn 2015-05-23 15:30:33 UTC
Created attachment 115901 [details]
WinDbg backtrace
Comment 10 Philippe Jung 2015-05-26 11:50:40 UTC
Should be fixed by https://gerrit.libreoffice.org/15908
Comment 11 Commit Notification 2015-05-26 12:56:10 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8790303b4c220d0c5dcf78a4c438a385ffe3f030

tdf#91389 EDITING: Crash when deleting header

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-05-26 13:02:32 UTC
Philippe Jung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e4922b0def9d3bebe04b48bc9055a16bb4965bf&h=libreoffice-5-0

tdf#91389 EDITING: Crash when deleting header

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Meeks 2015-05-26 13:40:15 UTC
Fixed by Phil - thanks ! =)