tdf#91389 EDITING: Crash when deleting header

Replaced MyDlg(pParent).Execute by VclPtr equivalent

Change-Id: I7e03913665f770d694f53949e08425ba60adc6ad
Reviewed-on: https://gerrit.libreoffice.org/15908
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>